Cart in backend is working correctly